# AI-Competitor-Research-Assistant

./: .env.example  .gitignore  Dockerfile  GUIDE.md  LICENSE  README.md  debug_env.py  docker-compose.yml  health_check.py  main.py  migrate_db.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  deploy.yml
app/agents/: alert_service.py  blog_agent.py  meta_ads_agent.py  reddit_agent.py  serp_agent.py  youtube_agent.py
app/api/: main.py
app/core/: aws_secrets.py  config.py  database.py  llm.py  logging_config.py  scheduler.py  tracking.py
app/evaluator/: evaluator.py
config/: config.yaml  prometheus.yml
grafana/dashboards/: competitor_intel.json
grafana/provisioning/dashboards/: dashboard.yml
nginx/: nginx.conf
scripts/: setup_ec2.sh
tests/: test_api.py
